# RAmazonS3

./: .Rbuildignore  .gitignore  Changelog  DESCRIPTION  NAMESPACE  Todo.xml  config.status  configure  configure.in
R/: acl.R  bucket.R  defaults.R  defaults.R.in  ops.R  save.R  sign.R  utils.R
Web/: GNUmakefile  config.status  index.html  index.html.in
Web/autom4te.cache/: requests  traces.0
autom4te.cache/: output.0  traces.0
inst/: sign.pl
inst/doc/: GNUmakefile  s3amazon.html  s3amazon.xml
man/: Bucket-class.Rd  about.Rd  addFile.Rd  getFile.Rd  getS3Access.Rd  listBucket.Rd  makeBucket.Rd  removeFile.Rd  s3Save.Rd  s3Source.Rd
src/: Makevars  sign.c
tests/: bucketInfo.R  eg.R  save.R  sign.pl  signing.R  tests.xml  works.xml
